--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script: tox
 deploy:
   provider: pypi
   distributions: sdist bdist_wheel
-  user: ppuertocrem
+  user: ppuerto
   password:
     secure: PLEASE_REPLACE_ME
   on:
